summary and links

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1> Sports News! </h1>
+        <h1> NFL News! </h1>
         <div id="articles"></div>
         <div id="notes"></div>
     </div>
